Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/speculative/Main.out
A.java:4:14: compiler.err.cant.resolve.location: kindname.class, NonExistentClass, , , (compiler.misc.location: kindname.class, A, null)
1 error
